--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,15 @@
     "@mui/material": "^6.1.4",
     "axios": "^1.7.7",
     "client": "file:",
+    "gapi": "^0.0.3",
+    "gapi-script": "^1.2.0",
     "json-server": "^1.0.0-beta.3",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
@@ -27,11 +32,14 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.8"
   }
 }
