--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,16 @@
     "gapi-script": "^1.2.0",
     "json-server": "^1.0.0-beta.3",
     "jspdf": "^2.5.2",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
